[tool.poetry]
name = "sqlalchemy-hybrid-utils"
version = "0.2.0"
description = "Extensions to make SQLAlchemy hybrid properties even more powerful."
authors = ["Elmer de Looff <elmer.delooff@gmail.com>"]
license = "BSD-2-Clause"
keywords= ["SQLAlchemy", "hybrid_property"]
repository = "https://github.com/edelooff/sqlalchemy-hybrid-utils"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = ">=1.3"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
pytest = "*"
flake8 = "*"
mypy = "*"
coverage = "*"
pytest-cov = "*"
nox = "*"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["sqlalchemy_hybrid_utils"]
omit = ["*/sqlalchemy_hybrid_utils/compat.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = ["# pragma: no cover", "if TYPE_CHECKING:", "except ImportError:"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
